Fix the focus visual of buttons to be more visible.

--- a/FishingRodOfDestiny/src/main/resources/fishingrodofdestiny/css/scene.css
+++ b/FishingRodOfDestiny/src/main/resources/fishingrodofdestiny/css/scene.css
@@ -16,7 +16,6 @@ Region {
 
 Button {
   -fx-text-fill: #ffffff;
-  -fx-background-color: #ff19ff;
 }
 
 .bottomButton {
